--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <script src="./main.js"></script>
+    <script src="./main.js" defer></script>
     <title>Etch - A - Sketch</title>
 </head>
 <body>
+    <button id="reset">Reset</button>
+    <div id="container"></div>
+    
     
 </body>
 </html>
